--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.88MB/s(Youtube:不良林), server: 198.57.27.225, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇭🇰 香港-20.78MB/s(Youtube:不良林), server: 10.vip341.xyz, port: 443, type: vmess, uuid: 2f0415a4-9acd-3435-a780-e447a2ce79fb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: 10.vip341.xyz}}
-  - {name: 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇭🇰 香港-161.0KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 198.57.27.225, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
-  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: u2.anmu.one, port: 16499, type: vmess, uuid: 32b306e1-d5b1-4913-d8d3-56ac23637de7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林), server: 213.183.53.207, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.231, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-398.5KB/s(Youtube:不良林), server: 129.226.94.27, port: 23785, type: vmess, uuid: d0771055-cccc-4b79-c4db-d2942f8c9e62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.69MB/s(Youtube:不良林), server: u2.anmu.one, port: 16499, type: vmess, uuid: 32b306e1-d5b1-4913-d8d3-56ac23637de7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-373.9KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-630.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
