--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.85MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇸🇬 新加坡-398.5KB/s(Youtube:不良林), server: 129.226.94.27, port: 23785, type: vmess, uuid: d0771055-cccc-4b79-c4db-d2942f8c9e62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 未知国家-1.81MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.94MB/s(Youtube:不良林), server: 198.57.27.225, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: silicon.starspace.link, port: 443, type: trojan, password: 4ZPDeqJ6g766UKDJ, sni: silicon.starspace.link, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.231, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: 129.226.94.145, port: 51848, type: vmess, uuid: ad4757f1-e28c-47b8-970c-51b232c653d8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 169.197.142.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2, server: 169.197.142.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2, server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 未知国家-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 未知国家-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 未知国家-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 未知国家-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 未知国家-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 未知国家-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 未知国家-1.81MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
